# LlamaIndex-Text-to-SQL-100-knocks

./: .gitignore  .gitmodules  README.md  pyproject.toml
llamaindex_text_to_sql_100_knocks/: extract_100knocks_qa.py  main.py  main_without_schema.py
results/: result.yaml  result_without_schema.yaml
tmp/: 20230429140710.txt  result_without_schema.yaml
