[tool.poetry]
name = "llamaindex-text-to-sql-100-knocks"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "llamaindex_text_to_sql_100_knocks"}]

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.5.27"
psycopg2 = "^2.9.6"
ruamel-yaml = "^0.17.26"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
